KOSPRO-54 Spring cleaning unit tests